Sameer:changes css attribute from visibility to display. I did this to solve the bug that visibility presented which was adding space

--- a/css/style.css
+++ b/css/style.css
@@ -667,12 +667,15 @@ footer{
 }
 
 #videos{
-	visibility:hidden
+	
+	display : none
 }
 #pictures{
-	visibility:hidden
+	
+	display : none
 }
 #songs{
-	visibility:hidden;
+	
 	background-image: url(img/songs.jpg);
+	display: none
 }
